--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <version>1.7.25</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
